Corrigindo e finalizando ProgressoUsuario e Badges